--- a/video18/index.html
+++ b/video18/index.html
@@ -23,6 +23,9 @@
         .box-2{
             background-color: rgb(0, 255, 238);
             color: rgb(253, 0, 0);
+            padding: 10px;
+            margin: 25px;
+            height: 200px;
             border: 2px solid black;
         }
     </style>
